force-app/main/default/objects/ReportObj__c/ReportObj__c.object-meta.xml
<CustomObject>
    <label>ReportObj</label>
    <nameField>
        <label>ReportObj Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ReportObj</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>