force-app/main/default/objects/ReportObj__c/fields/Report2_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Report2_Trigger__c</fullName>
    <label>Report2 Trigger</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>