force-app/main/default/objects/ReportObj__c/fields/Report_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Report_Trigger__c</fullName>
    <label>Report Trigger</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>